; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_pmap.c_pmap_large_map_getva.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_pmap.c_pmap_large_map_getva.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@large_vmem = common dso_local global i32 0, align 4
@VMEM_ADDR_MIN = common dso_local global i32 0, align 4
@VMEM_ADDR_MAX = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4
@M_BESTFIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32*)* @pmap_large_map_getva to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmap_large_map_getva(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* @large_vmem, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @VMEM_ADDR_MIN, align 4
  %14 = load i32, i32* @VMEM_ADDR_MAX, align 4
  %15 = load i32, i32* @M_NOWAIT, align 4
  %16 = load i32, i32* @M_BESTFIT, align 4
  %17 = or i32 %15, %16
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @vmem_xalloc(i32 %9, i32 %10, i32 %11, i32 %12, i32 0, i32 %13, i32 %14, i32 %17, i32* %18)
  ret i32 %19
}

declare dso_local i32 @vmem_xalloc(i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
